bug 1412690 - add task dependencies. r=rail
This patch adds the `release_deps` transform, which adds every
kind-dependency task that has the same product as a task dependency
(with some exceptions).

This patch made it clear that we need a standard way of defining
product.

MozReview-Commit-ID: 4xOJRQSCTgF

UltraBlame original commit: ee3047d12729d1e86317989edc605a88327f4a03

--- a/taskcluster/ci/beetmover-cdns/kind.yml
+++ b/taskcluster/ci/beetmover-cdns/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 beetmover_cdns
 :
 transforms
@@ -80,6 +88,14 @@ transforms
 task
 :
 transforms
+kind
+-
+dependencies
+:
+-
+beetmover
+-
+checksums
 job
 -
 defaults
@@ -209,30 +225,3 @@ platform
 Android
 /
 opt
-#
-We
-probably
-want
-a
-dummy
-task
-after
-the
-beetmover
-checksums
-or
-the
-publish
-notify
-task
-?
-#
-kind
--
-dependencies
-:
-#
--
-beetmover
--
-checksums
