--- a/taskcluster/ci/release-bouncer-aliases/kind.yml
+++ b/taskcluster/ci/release-bouncer-aliases/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 job
 :
 transforms
@@ -80,6 +88,16 @@ transforms
 task
 :
 transforms
+kind
+-
+dependencies
+:
+-
+release
+-
+uptake
+-
+monitoring
 jobs
 :
 fennec
