--- a/taskcluster/ci/release-mark-as-shipped/kind.yml
+++ b/taskcluster/ci/release-mark-as-shipped/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 job
 :
 transforms
@@ -80,23 +88,26 @@ transforms
 task
 :
 transforms
-#
-TODO
-:
-#
 kind
 -
 dependencies
 :
-#
--
-release
 -
 push
 -
-to
+apk
 -
-cdns
+release
+-
+bouncer
+-
+aliases
+-
+release
+-
+version
+-
+bump
 jobs
 :
 fennec
@@ -323,3 +334,8 @@ release
 -
 drivers
 "
+extra
+:
+product
+:
+fennec
