--- a/taskcluster/ci/release-uptake-monitoring/kind.yml
+++ b/taskcluster/ci/release-uptake-monitoring/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 job
 :
 transforms
@@ -80,21 +88,12 @@ transforms
 task
 :
 transforms
-#
-TODO
-:
-#
 kind
 -
 dependencies
 :
-#
 -
-release
--
-push
--
-to
+beetmover
 -
 cdns
 jobs
