--- a/taskcluster/ci/release-version-bump/kind.yml
+++ b/taskcluster/ci/release-version-bump/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 job
 :
 transforms
@@ -80,30 +88,14 @@ transforms
 task
 :
 transforms
-#
-TODO
-:
-#
 kind
 -
 dependencies
 :
-#
 -
-release
--
-push
--
-to
+beetmover
 -
 cdns
-(
-aka
-.
-push
-to
-releases
-)
 jobs
 :
 fennec
