--- a/taskcluster/ci/release-notify-publish/kind.yml
+++ b/taskcluster/ci/release-notify-publish/kind.yml
@@ -69,6 +69,14 @@ taskgraph
 .
 transforms
 .
+release_deps
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 task
 :
 transforms
@@ -80,6 +88,18 @@ dependencies
 push
 -
 apk
+-
+release
+-
+bouncer
+-
+aliases
+-
+release
+-
+version
+-
+bump
 jobs
 :
 fennec
@@ -284,3 +304,8 @@ release
 -
 drivers
 "
+extra
+:
+product
+:
+fennec
