Bug 1349944 - Add browser.theme.onUpdated to watch for theme updates. r=jaws,mixedpuppy
MozReview-Commit-ID: JX4gRa3Qt0p

UltraBlame original commit: 6eec7e78c673f240e57b8c28bd8e2df99b54333f

--- a/toolkit/components/extensions/test/browser/browser.ini
+++ b/toolkit/components/extensions/test/browser/browser.ini
@@ -24,6 +24,11 @@ browser_ext_themes_dynamic_getCurrent
 js
 ]
 [
+browser_ext_themes_dynamic_onUpdated
+.
+js
+]
+[
 browser_ext_themes_dynamic_updates
 .
 js
@@ -40,6 +45,11 @@ js
 ]
 [
 browser_ext_themes_persistence
+.
+js
+]
+[
+browser_ext_themes_static_onUpdated
 .
 js
 ]
