Bug 1349944 - Add browser.theme.getCurrent() to query the selected theme. r=jaws,mixedpuppy
MozReview-Commit-ID: Hzdm21riVlb

UltraBlame original commit: bf4fd832f591878b0c8838179f6f62e34fd573e3

--- a/toolkit/components/extensions/test/browser/browser.ini
+++ b/toolkit/components/extensions/test/browser/browser.ini
@@ -19,6 +19,11 @@ browser_ext_themes_chromeparity
 js
 ]
 [
+browser_ext_themes_dynamic_getCurrent
+.
+js
+]
+[
 browser_ext_themes_dynamic_updates
 .
 js
