--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -795,6 +795,17 @@ browser_ext_tabs_detectLanguage
 js
 ]
 [
+browser_ext_tabs_discard
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+[
 browser_ext_tabs_discarded
 .
 js
