Bug 1412823 - Change the message to display when deleting a bookmark folder/item r=maliu
MozReview-Commit-ID: Hg5AR2FT78a

UltraBlame original commit: 13234a73f3a30a89c9c94b5fb9a4247617b98ed3

--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -5363,6 +5363,21 @@ string
 name
 =
 "
+folder_removed
+"
+>
+&
+folder_removed
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 bookmark_edit_title
 "
 >
