Bug 1408922 - Rename and enable browser_webconsole_autocomplete_popup.js in the new console frontend; r=Honza.
MozReview-Commit-ID: A8wZ3MCHgCt

UltraBlame original commit: 95187168788053e9a97cf40157fa904cf1a0fde6

--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -1807,6 +1807,11 @@ browser_jsterm_popup_close_on_tab_switch
 js
 ]
 [
+browser_jsterm_popup
+.
+js
+]
+[
 browser_netmonitor_shows_reqs_in_webconsole
 .
 js
@@ -1926,19 +1931,6 @@ true
 #
 Bug
 1408920
-[
-browser_webconsole_autocomplete_popup
-.
-js
-]
-skip
--
-if
-=
-true
-#
-Bug
-1408922
 [
 browser_webconsole_batching
 .
