Bug 1407501 - Disable toolkit/components/extensions/test/xpcshell/test_ext_contentscript_scriptCreated.js on debug for frequent failures. r=me, a=testonly
UltraBlame original commit: a108409e726aa667846678b73e10de3eb15f5b32

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
@@ -41,6 +41,14 @@ test_ext_contentscript_scriptCreated
 .
 js
 ]
+skip
+-
+if
+=
+debug
+#
+Bug
+1407501
 [
 test_ext_contentscript_triggeringPrincipal
 .
