Bug 1412358 - add telemetry probes for actions on accessibility indicator button and accessibility privacy preference checkbox. r=jimm
MozReview-Commit-ID: 4xXbf5UwnWK

UltraBlame original commit: 905db84ed1726d0491d44fc7d1940d7172906e0c

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -105,6 +105,62 @@ cpp_guard
 '
 ACCESSIBILITY
 '
+indicator_acted_on
+:
+bug_numbers
+:
+-
+1412358
+description
+:
+>
+Recorded
+on
+click
+or
+SPACE
+/
+ENTER
+keypress
+event
+.
+Boolean
+stating
+if
+the
+accessibility
+indicactor
+button
+was
+acted
+on
+.
+expires
+:
+"
+62
+"
+kind
+:
+boolean
+notification_emails
+:
+-
+yzenevich
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+'
+main
+'
 #
 The
 following
@@ -2825,6 +2881,67 @@ record_in_processes
 :
 -
 main
+prevent_accessibility_services
+:
+bug_numbers
+:
+-
+1412358
+description
+:
+>
+Recorded
+on
+command
+event
+.
+Boolean
+stating
+if
+the
+preference
+checkbox
+for
+preventing
+accessibility
+from
+accessing
+the
+browser
+(
+Privacy
+&
+Security
+)
+was
+checked
+.
+expires
+:
+"
+62
+"
+kind
+:
+boolean
+notification_emails
+:
+-
+yzenevich
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+'
+main
+'
 #
 The
 following
