--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
@@ -2184,6 +2184,24 @@ tags
 =
 webextensions
 [
+test_webextension_events
+.
+js
+]
+skip
+-
+if
+=
+appname
+=
+=
+"
+thunderbird
+"
+tags
+=
+webextensions
+[
 test_webextension_install
 .
 js
