Bug 1412486: Update bindgen. r=xidorn
Constified enums are default now. I think I want to introduce an option to
bindgen to allow setting the default enum behavior, but it doesn't need to block
this.

The ServoBindings.toml changes are somewhat hacky, but that's because of
https://github.com/rust-lang-nursery/rust-bindgen/issues/1125.

Also, the fixups now need to account for whitespace, since quote generates stuff
like root :: nsString, and we don't rustfmt the bindings if there's no rustfmt
installed.

MozReview-Commit-ID: FZOvZnfYXj5

UltraBlame original commit: b21ef5bb00d37e161d618fc0e702a647e445c0f8

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -1008,22 +1008,263 @@ nsRestyleHint
 OriginFlags
 "
 ]
-constified
+#
+FIXME
+:
+use
+proper
+namespaces
+and
+such
+when
+#
+https
+:
+/
+/
+github
+.
+com
+/
+rust
+-
+lang
+-
+nursery
+/
+rust
+-
+bindgen
+/
+issues
+/
+1125
+#
+is
+fixed
+.
+rusty
 -
 enums
 =
 [
 "
-UpdateAnimationsTasks
+nsCompatibility
 "
 "
-ParsingMode
+EffectCompositor_CascadeLevel
 "
 "
-ThemeWidgetType
+SheetType
 "
 "
-ServoTraversalFlags
+CallerType
+"
+"
+IterationCompositeOperation
+"
+"
+CompositeOperation
+"
+"
+InheritTarget
+"
+"
+SheetParsingMode
+"
+"
+FontFamilyType
+"
+"
+nsStyleContentType
+"
+"
+nsStyleSVGOpacitySource
+"
+"
+nsStyleUnit
+"
+"
+nsCSSKeyword
+"
+"
+nsIDocument_DocumentTheme
+"
+"
+nsIDocument_Type
+"
+"
+nsCSSUnit
+"
+"
+nsCSSPropertyID
+"
+"
+nsCSSCounterDesc
+"
+"
+nsMediaExpression_Range
+"
+"
+nsMediaFeature_RangeType
+"
+"
+nsMediaFeature_ValueType
+"
+"
+nsresult
+"
+"
+nsAtom_AtomKind
+"
+"
+nsStyleImageLayers_LayerType
+"
+"
+nsStyleImageOrientation_Angles
+"
+"
+nsTimingFunction_Type
+"
+"
+ServoElementSnapshotFlags
+"
+"
+Side
+"
+"
+PlaybackDirection
+"
+"
+FillMode
+"
+"
+HalfCorner
+"
+"
+URLMatchingFunction
+"
+"
+StyleDisplay
+"
+"
+StyleFloatEdge
+"
+"
+StyleShapeRadius
+"
+"
+StyleWindowDragging
+"
+"
+StyleOrient
+"
+"
+StyleBoxSizing
+"
+"
+StyleClear
+"
+"
+StyleFloat
+"
+"
+StyleUserModify
+"
+"
+StyleUserInput
+"
+"
+StyleBoxDirection
+"
+"
+StyleTextJustify
+"
+"
+StyleHyphens
+"
+"
+StyleGeometryBox
+"
+"
+StyleFillRule
+"
+"
+StyleShapeSourceType
+"
+"
+StyleBasicShapeType
+"
+"
+nsStyleImageLayers_Size_DimensionType
+"
+"
+StyleStackSizing
+"
+"
+StyleBoxPack
+"
+"
+StyleBoxOrient
+"
+"
+StyleBoxAlign
+"
+"
+StyleUserFocus
+"
+"
+StyleUserSelect
+"
+"
+StyleImageLayerRepeat
+"
+"
+StyleBoxDecorationBreak
+"
+"
+StyleRuleInclusion
+"
+"
+StyleGridTrackBreadth
+"
+"
+nsStyleImageType
+"
+"
+StyleWhiteSpace
+"
+"
+nsStyleSVGPaintType
+"
+"
+nsStyleSVGFallbackType
+"
+#
+"
+.
+*
+Style
+.
+*
+"
+"
+nsINode_BooleanFlag
+"
+"
+CSSPseudoElementType
+"
+"
+CSSPseudoClassType
+"
+"
+LookAndFeel_ColorID
+"
+"
+LookAndFeel_FontID
+"
+"
+MatrixTransformOperator
 "
 ]
 constified
@@ -1672,9 +1913,6 @@ nsStyleVisibility
 nsStyleXUL
 "
 "
-nsTArray
-"
-"
 nsTArrayHeader
 "
 "
@@ -1954,9 +2192,6 @@ t
 ]
 )
 )
-"
-"
-FallibleTArray
 "
 "
 mozilla
@@ -2572,8 +2807,16 @@ pat
 \
 \
 broot
+\
+\
+s
+*
 :
 :
+\
+\
+s
+*
 nsString
 \
 \
@@ -2597,11 +2840,31 @@ pat
 \
 \
 broot
+\
+\
+s
+*
 :
 :
+\
+\
+s
+*
 nsTString
+\
+\
+s
+*
 <
+\
+\
+s
+*
 u16
+\
+\
+s
+*
 >
 "
 rep
@@ -3463,8 +3726,20 @@ pat
 \
 \
 bnsTString
+\
+\
+s
+*
 <
+\
+\
+s
+*
 u16
+\
+\
+s
+*
 >
 "
 rep
@@ -3484,14 +3759,16 @@ string
 pat
 =
 "
-\
-\
-b
 <
+\
+\
+s
+*
 nsString
 \
 \
-b
+s
+*
 "
 rep
 =
