Bug 1413006 - Use .apk not .ap_ when building --with-gradle. r=maliu
MozReview-Commit-ID: 28NpESuxjf8

UltraBlame original commit: 9157360e6cd6fb8b28c46ea646e4ea6dff759293

--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -4036,11 +4036,11 @@ gradle_dir
 /
 app
 /
-intermediates
+outputs
 /
-res
+apk
 /
-resources
+app
 -
 official
 -
@@ -4048,7 +4048,7 @@ photon
 -
 debug
 .
-ap_
+apk
 gecko
 -
 nodeps
