Bug 1405811 - Use AC_SUBST_LIST for various variables contributing to host compilation flags. r=mshal
MozReview-Commit-ID: 53JKycKlzY2

UltraBlame original commit: f34bd383fea056b9278a85f74efe9c2e97aa0ab3

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -18737,15 +18737,15 @@ AC_SUBST
 (
 HOST_CXX
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CPPFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CXXFLAGS
 )
@@ -18753,7 +18753,7 @@ AC_SUBST
 (
 HOST_LDFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_OPTIMIZE_FLAGS
 )
