--- a/old-configure.in
+++ b/old-configure.in
@@ -42590,15 +42590,15 @@ AC_SUBST
 (
 HOST_CXX
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CPPFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_CXXFLAGS
 )
@@ -42606,7 +42606,7 @@ AC_SUBST
 (
 HOST_LDFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 HOST_OPTIMIZE_FLAGS
 )
