Bug 1413254 - Establish dedicated mach command for Bugzilla metadata validation; r=jmaher
Previously, the CI task invoked 2 mach commands and performed manual
gzip compressed. This was sub-optimal for a few reasons:

* Redundant moz.build evaluation made execution slower
* Potential for shell expansion to interfere with wildcards
* Made it harder to change exit code

By moving all logic into a mach command, we eliminate all the issues
around using shell.

Behavior of the new command and the CI task should be backwards
compatible.

MozReview-Commit-ID: HUFvLteKLOO

UltraBlame original commit: f4c31bb587d5012392cb137ab68f499b9776f4cb

--- a/taskcluster/ci/source-test/file-metadata.yml
+++ b/taskcluster/ci/source-test/file-metadata.yml
@@ -96,17 +96,6 @@ task
 command
 :
 >
-mkdir
--
-p
-/
-builds
-/
-worker
-/
-artifacts
-&
-&
 cd
 /
 builds
@@ -126,73 +115,13 @@ file
 info
 bugzilla
 -
-component
--
--
-format
-json
-'
-*
-*
-'
->
+automation
 /
 builds
 /
 worker
 /
 artifacts
-/
-components
-.
-json
-&
-&
-.
-/
-mach
-file
--
-info
-missing
--
-bugzilla
--
--
-format
-json
-'
-*
-*
-'
-|
-tee
-/
-builds
-/
-worker
-/
-artifacts
-/
-missing
-.
-json
-&
-&
-gzip
--
--
-keep
-/
-builds
-/
-worker
-/
-artifacts
-/
-*
-.
-json
 worker
 :
 artifacts
