Backed out changeset fdebe274e971 (bug 1413092) for failures in test_mozbuild_reading.py CLOSED TREE
MozReview-Commit-ID: JA9UPvYmWMF

UltraBlame original commit: 7651a53b3faf36d9f76202eab9f1338b9d839c72

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -1634,6 +1634,33 @@ DIRECTORY
 INSTEAD
 .
 [
+browser_bug561636
+.
+js
+]
+skip
+-
+if
+=
+true
+#
+bug
+1057615
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
 browser_bug563588
 .
 js
@@ -2032,6 +2059,33 @@ browser_bug594131
 .
 js
 ]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+browser_bug595507
+.
+js
+]
+skip
+-
+if
+=
+true
+#
+bug
+1057615
 #
 DO
 NOT
