Bug 1411727 - Update Debugger frontend (10-25). r=jdescottes
MozReview-Commit-ID: BffE9lchnEj

UltraBlame original commit: 129dfaaf265a5eb9b18681fded2c3910167ddcff

--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -677,6 +677,15 @@ bug
 [
 browser_dbg
 -
+layout
+-
+changes
+.
+js
+]
+[
+browser_dbg
+-
 pause
 -
 exceptions
@@ -770,9 +779,9 @@ Bug
 [
 browser_dbg
 -
-search
+quick
 -
-sources
+open
 .
 js
 ]
@@ -780,37 +789,7 @@ skip
 -
 if
 =
-os
-=
-=
-"
-win
-"
-#
-Bug
-1393121
-[
-browser_dbg
--
-search
--
-symbols
-.
-js
-]
-skip
--
-if
-=
-os
-=
-=
-"
-win
-"
-#
-Bug
-1393121
+true
 [
 browser_dbg
 -
@@ -897,7 +876,7 @@ skip
 -
 if
 =
-asan
+true
 [
 browser_dbg
 -
