Bug 1411979 - Share the getTempFile function in xpcshell and browser tests. r=mak
MozReview-Commit-ID: 5hshgOrFqws

UltraBlame original commit: f4d73d76887346106e850ef06d8091d75ba0b29f

--- a/toolkit/components/jsdownloads/test/unit/xpcshell.ini
+++ b/toolkit/components/jsdownloads/test/unit/xpcshell.ini
@@ -105,25 +105,11 @@ test_PrivateTemp
 .
 js
 ]
-#
-coverage
-flag
-is
-for
-bug
-1336730
 skip
 -
 if
 =
-(
-os
-!
-=
-'
-linux
-'
-|
-|
-coverage
-)
+true
+#
+Bug
+1336730
