Bug 1410360 - add mochitest for about:devtools tab selection behavior;r=ochameau
MozReview-Commit-ID: 8eX13qJ1jt8

UltraBlame original commit: f046fbaaaab6a87ec055ed9d1a4db08ecb60d49c

--- a/devtools/shim/aboutdevtools/test/browser.ini
+++ b/devtools/shim/aboutdevtools/test/browser.ini
@@ -20,6 +20,11 @@ browser_aboutdevtools_enables_devtools
 js
 ]
 [
+browser_aboutdevtools_focus_owner_tab
+.
+js
+]
+[
 browser_aboutdevtools_reuse_existing
 .
 js
