servo: Merge #19073 - Use encoding-rs instead of rust-encoding (from servo:encoding-rs); r=SimonSapin
Source-Repo: https://github.com/servo/servo
Source-Revision: 994ff4b66ee51bbfae431af0ca99497b38fb0e19

UltraBlame original commit: 0fea0d09e61f8bf4d9019ddd354c312506d81dde

--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -296,12 +296,12 @@ path
 domobject_derive
 "
 }
-encoding
+encoding_rs
 =
 "
 0
 .
-2
+7
 "
 euclid
 =
@@ -818,22 +818,11 @@ segmentation
 "
 url
 =
-{
-version
-=
 "
 1
 .
-2
+6
 "
-features
-=
-[
-"
-query_encoding
-"
-]
-}
 utf
 -
 8
