Bug 1413332 - Make geckoview's BuildConfig under --with-gradle include computed values. r=maliu,snorp
There's already a secret dependency where
mobile/android/base/Makefile.in (and generated AppConstants.java)
depends on $topobjdir/buildid.h, so this shouldn't be much worse than
what we have.

MozReview-Commit-ID: 2hkAGE9uT10

UltraBlame original commit: 6d41004b33dc92c7fab874d06b23c3f6f35329a9

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -428,7 +428,7 @@ mozconfig
 .
 substs
 .
-MOZ_APP_ABI
+TARGET_XPCOM_ABI
 }
 \
 "
@@ -490,6 +490,42 @@ case
 on
 Android
 .
+/
+/
+/
+/
+Mimic
+Python
+:
+open
+(
+os
+.
+path
+.
+join
+(
+buildconfig
+.
+topobjdir
+'
+buildid
+.
+h
+'
+)
+)
+.
+readline
+(
+)
+.
+split
+(
+)
+[
+2
+]
 buildConfigField
 '
 String
@@ -501,11 +537,34 @@ MOZ_APP_BUILDID
 \
 "
 {
-mozconfig
+file
+(
+"
+{
+topobjdir
+}
+/
+buildid
 .
-substs
+h
+"
+)
 .
-MOZ_BUILDID
+getText
+(
+'
+utf
+-
+8
+'
+)
+.
+split
+(
+)
+[
+2
+]
 }
 \
 "
