Bug 1412984 - Strip 'vars' debugging from Fennec in "official" audience flavour dimension. r=maliu
MozReview-Commit-ID: 6BEn52ARHQS

UltraBlame original commit: 924d145fb927d432fd835b0aa02e800254c7b971

--- a/mobile/android/gradle/debug_level.gradle
+++ b/mobile/android/gradle/debug_level.gradle
@@ -5,7 +5,7 @@
 -
 Mode
 :
-Java
+Groovy
 ;
 c
 -
@@ -139,6 +139,40 @@ buildType
 name
 /
 /
+For
+:
+app
+like
+'
+local
+'
+'
+localOld
+'
+or
+'
+official
+'
+.
+For
+other
+projects
+null
+.
+def
+audienceDimension
+=
+variant
+.
+productFlavors
+[
+0
+]
+?
+.
+name
+/
+/
 The
 default
 is
@@ -187,13 +221,23 @@ useful
 if
 (
 !
-buildType
-.
-equals
-(
 '
 debug
 '
+.
+equals
+(
+buildType
+)
+|
+|
+'
+official
+'
+.
+equals
+(
+audienceDimension
 )
 )
 {
