--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -2273,6 +2273,88 @@ bug
 1385695
 )
 .
+/
+/
+/
+/
+Official
+builds
+compile
+a
+hacked
+up
+app
+:
+Official
+.
+.
+Debug
+but
+need
+the
+/
+/
+release
+versions
+of
+the
+dependencies
+in
+order
+to
+not
+have
+debugging
+/
+/
+information
+.
+It
+'
+s
+not
+yet
+possible
+to
+specify
+just
+officialDebug
+so
+we
+/
+/
+hack
+around
+it
+here
+.
+if
+(
+mozconfig
+.
+substs
+.
+MOZILLA_OFFICIAL
+)
+{
+debugCompile
+project
+(
+path
+:
+'
+:
+geckoview
+'
+configuration
+:
+"
+release
+"
+)
+}
+else
+{
 debugCompile
 project
 (
@@ -2288,6 +2370,7 @@ configuration
 debug
 "
 )
+}
 releaseCompile
 project
 (
@@ -2303,6 +2386,33 @@ configuration
 release
 "
 )
+if
+(
+mozconfig
+.
+substs
+.
+MOZILLA_OFFICIAL
+)
+{
+debugCompile
+project
+(
+path
+:
+'
+:
+thirdparty
+'
+configuration
+:
+"
+release
+"
+)
+}
+else
+{
 debugCompile
 project
 (
@@ -2318,6 +2428,7 @@ configuration
 debug
 "
 )
+}
 releaseCompile
 project
 (
