--- a/browser/components/customizableui/test/browser.ini
+++ b/browser/components/customizableui/test/browser.ini
@@ -209,6 +209,20 @@ browser_927717_customize_drag_empty_toolbar
 js
 ]
 [
+browser_932928_show_notice_when_palette_empty
+.
+js
+]
+disabled
+=
+Bug
+1163231
+-
+Fails
+on
+all
+platforms
+[
 browser_934113_menubar_removable
 .
 js
