Bug 361923 - Can't use remote search engine icons larger than 10KB. r=florian
MozReview-Commit-ID: D0lmhAwabb3

UltraBlame original commit: 8c551c669a7f1fbcbeb1c37af6eb448e57382070

--- a/toolkit/components/search/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/search/tests/xpcshell/xpcshell.ini
@@ -27,6 +27,11 @@ files
 =
 data
 /
+big_icon
+.
+ico
+data
+/
 chrome
 .
 manifest
@@ -206,6 +211,11 @@ js
 ]
 [
 test_645970
+.
+js
+]
+[
+test_big_icon
 .
 js
 ]
