servo: Merge #19098 - Make the unrooted_must_root conditional on a default Cargo feature (from servo:minimal-plugin); r=jdm
Only http://perf.rust-lang.org/ will disable it, in order to be less subject to changes to rustc internal APIs.

Source-Repo: https://github.com/servo/servo
Source-Revision: 7f2ac4c559a2ff99ed7571af646ecee3f33168c3

UltraBlame original commit: 053648c20b753e656ec3f4bce556b41ccacffe59

--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -80,6 +80,22 @@ servo_allocator
 unstable
 "
 ]
+unrooted_must_root_lint
+=
+[
+"
+script_plugins
+/
+unrooted_must_root_lint
+"
+]
+default
+=
+[
+"
+unrooted_must_root_lint
+"
+]
 [
 build
 -
@@ -776,6 +792,13 @@ path
 /
 style
 "
+features
+=
+[
+"
+servo
+"
+]
 }
 style_traits
 =
