Bug 1407542 - Add mochitest checking that MediaStreams can be GCed. r=jib
MozReview-Commit-ID: Aypf1QAG7o8

UltraBlame original commit: 21762797d5ec694d319a209ef80c3c94b0229bf4

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -539,6 +539,11 @@ test_getUserMedia_callbacks
 html
 ]
 [
+test_getUserMedia_GC_MediaStream
+.
+html
+]
+[
 test_getUserMedia_getTrackById
 .
 html
