servo: Merge #19070 - Enable CSS tests (from jdm:csstests); r=metajack
Do not merge this; I'm looking into what it takes to stop running the test-css jobs.

Source-Repo: https://github.com/servo/servo
Source-Revision: 86b9e7d7d604e00cfd7ab63351d3221cd5cf872e

UltraBlame original commit: 32c3b6e197a73adc95140fe16e2bb7ad5d3be32e

--- a/servo/etc/ci/buildbot_steps.yml
+++ b/servo/etc/ci/buildbot_steps.yml
@@ -69,7 +69,7 @@ processes
 total
 -
 chunks
-4
+6
 -
 -
 this
@@ -270,7 +270,7 @@ processes
 total
 -
 chunks
-4
+6
 -
 -
 this
@@ -426,7 +426,7 @@ processes
 total
 -
 chunks
-4
+6
 -
 -
 this
@@ -557,7 +557,7 @@ processes
 total
 -
 chunks
-4
+6
 -
 -
 this
@@ -901,7 +901,7 @@ release
 mach
 test
 -
-css
+wpt
 -
 -
 release
@@ -914,13 +914,13 @@ processes
 total
 -
 chunks
-2
+6
 -
 -
 this
 -
 chunk
-1
+5
 -
 -
 log
@@ -928,7 +928,7 @@ log
 raw
 test
 -
-css
+wpt
 .
 log
 -
@@ -936,7 +936,7 @@ log
 log
 -
 errorsummary
-css
+wpt
 -
 errorsummary
 .
@@ -953,7 +953,7 @@ mach
 filter
 -
 intermittents
-css
+wpt
 -
 errorsummary
 .
@@ -973,7 +973,7 @@ log
 filteredsummary
 filtered
 -
-css
+wpt
 -
 errorsummary
 .
@@ -1054,7 +1054,7 @@ release
 mach
 test
 -
-css
+wpt
 -
 -
 release
@@ -1067,13 +1067,13 @@ processes
 total
 -
 chunks
-2
+6
 -
 -
 this
 -
 chunk
-2
+6
 -
 -
 log
@@ -1081,7 +1081,7 @@ log
 raw
 test
 -
-css
+wpt
 .
 log
 -
@@ -1089,7 +1089,7 @@ log
 log
 -
 errorsummary
-css
+wpt
 -
 errorsummary
 .
@@ -1106,7 +1106,7 @@ mach
 filter
 -
 intermittents
-css
+wpt
 -
 errorsummary
 .
@@ -1126,7 +1126,7 @@ log
 filteredsummary
 filtered
 -
-css
+wpt
 -
 errorsummary
 .
@@ -1580,6 +1580,18 @@ processes
 24
 -
 -
+total
+-
+chunks
+2
+-
+-
+this
+-
+chunk
+1
+-
+-
 log
 -
 raw
@@ -1729,14 +1741,26 @@ assertions
 mach
 test
 -
-css
+wpt
 -
 -
 release
 -
 -
 processes
-16
+24
+-
+-
+total
+-
+chunks
+2
+-
+-
+this
+-
+chunk
+2
 -
 -
 log
@@ -1744,7 +1768,7 @@ log
 raw
 test
 -
-css
+wpt
 .
 log
 -
@@ -1752,7 +1776,7 @@ log
 log
 -
 errorsummary
-css
+wpt
 -
 errorsummary
 .
@@ -1769,7 +1793,7 @@ mach
 filter
 -
 intermittents
-css
+wpt
 -
 errorsummary
 .
@@ -1789,7 +1813,7 @@ log
 filteredsummary
 filtered
 -
-css
+wpt
 -
 errorsummary
 .
