--- a/taskcluster/ci/test/misc.yml
+++ b/taskcluster/ci/test/misc.yml
@@ -48,6 +48,32 @@ config
 true
 config
 :
+by
+-
+test
+-
+platform
+:
+android
+-
+4
+.
+2
+-
+x86
+/
+opt
+:
+-
+android
+/
+androidx86
+.
+py
+android
+.
+*
+:
 -
 android
 /
