Bug 1408352 - Add 'always_target' to lint and python unittest tasks, r=dustin
The mochitest and reftest selftest tasks are excluded because they also
schedule several builds as dependencies which is likely going to be unexpected
behaviour.

MozReview-Commit-ID: 9eoVJ5qpAMO

UltraBlame original commit: 6fa4468dd31edf46f34a95d947e0798b06ae8e50

--- a/taskcluster/ci/source-test/python.yml
+++ b/taskcluster/ci/source-test/python.yml
@@ -7,6 +7,11 @@ platform
 linux64
 /
 opt
+always
+-
+target
+:
+true
 worker
 -
 type
@@ -296,6 +301,11 @@ require
 build
 :
 true
+always
+-
+target
+:
+false
 treeherder
 :
 symbol
@@ -841,6 +851,11 @@ require
 build
 :
 true
+always
+-
+target
+:
+false
 treeherder
 :
 symbol
