Bug 1411712 - Use AC_SUBST_LIST instead of AC_SUBST for vairables from configure contributing to LDFLAGS. r=mshal
MozReview-Commit-ID: 21jJY8oanQB

UltraBlame original commit: 53f3dffade39ab54b4ae89950d7a16f08b0ae14b

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -12913,7 +12913,7 @@ AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_FLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_LDFLAGS
 )
@@ -17956,7 +17956,7 @@ AC_SUBST
 (
 BIN_FLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_DEBUG_LDFLAGS
 )
@@ -17980,7 +17980,7 @@ AC_SUBST
 (
 INCREMENTAL_LINKER
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_FIX_LINK_PATHS
 )
@@ -18255,7 +18255,7 @@ AC_SUBST_LIST
 (
 OS_COMPILE_CXXFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_LDFLAGS
 )
