--- a/old-configure.in
+++ b/old-configure.in
@@ -32581,7 +32581,7 @@ AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_FLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_LDFLAGS
 )
@@ -39674,7 +39674,7 @@ AC_SUBST
 (
 MOZ_PREF_EXTENSIONS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_DEBUG_LDFLAGS
 )
@@ -39794,7 +39794,7 @@ AC_SUBST
 (
 INCREMENTAL_LINKER
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_FIX_LINK_PATHS
 )
@@ -41938,7 +41938,7 @@ AC_SUBST_LIST
 (
 OS_COMPILE_CXXFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_LDFLAGS
 )
