Bug 1413709 - add tests to detect improper ice restart by answer. r=bwc
Adding tests that would have shown the issue fixed in Bug 1405940.
If the answer during a renegotiation has modified ICE credentials,
it should cause an error.  These tests check for that error.

MozReview-Commit-ID: 9u8GGpslDdK

UltraBlame original commit: 6f3b7e0969c97c5c085b52272cccfc9bc3e9c37d

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -2026,6 +2026,21 @@ toolkit
 android
 '
 [
+test_peerConnection_restartIceBadAnswer
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+[
 test_peerConnection_scaleResolution
 .
 html
