--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -156,6 +156,11 @@ browser_click_bookmarks_on_toolbar
 js
 ]
 [
+browser_controller_onDrop_tagFolder
+.
+js
+]
+[
 browser_controller_onDrop
 .
 js
