--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -207,6 +207,21 @@ lgpllibs
 DLL_SUFFIX
 #
 ifdef
+MOZ_FFVPX
+BINPATH
+/
+DLL_PREFIX
+mozavutil
+DLL_SUFFIX
+BINPATH
+/
+DLL_PREFIX
+mozavcodec
+DLL_SUFFIX
+#
+endif
+#
+ifdef
 MOZ_OMX_PLUGIN
 BINPATH
 /
