Bug 1295886 - P10. Add a FLAC only option to ffvpx. r=gerald
Remove the VP8 and VP9 decoder and the subsequently unused functions.

This drops the size to libmozavcodec to around 1MB down from 4MB.

MozReview-Commit-ID: Ge57fauG35L

UltraBlame original commit: fbcfbb6be12f4c16ab0d5fb04d7d4ef030d7a566

--- a/old-configure.in
+++ b/old-configure.in
@@ -27573,6 +27573,8 @@ dnl
 =
 MOZ_FFVPX
 =
+MOZ_FFVPX_FLACONLY
+=
 case
 "
 CPU_ARCH
@@ -27596,6 +27598,9 @@ arm
 *
 )
 MOZ_FFVPX
+=
+1
+MOZ_FFVPX_FLACONLY
 =
 1
 ;
@@ -27641,6 +27646,20 @@ then
 AC_DEFINE
 (
 MOZ_FFVPX
+)
+fi
+if
+test
+-
+n
+"
+MOZ_FFVPX_FLACONLY
+"
+;
+then
+AC_DEFINE
+(
+MOZ_FFVPX_FLACONLY
 )
 fi
 dnl
@@ -42081,6 +42100,10 @@ MOZ_TREMOR
 AC_SUBST
 (
 MOZ_FFVPX
+)
+AC_SUBST
+(
+MOZ_FFVPX_FLACONLY
 )
 AC_SUBST_LIST
 (
