Bug 1295886 - P14. Add arm neon and vfp optimized methods to ffmpeg. r=mshal
MozReview-Commit-ID: KMUZoDWoisi

UltraBlame original commit: cd2b7c34307eef0bf59b1a2184e1be5cc7c4d897

--- a/old-configure.in
+++ b/old-configure.in
@@ -27581,31 +27581,12 @@ CPU_ARCH
 "
 in
 x86
-)
-MOZ_FFVPX
-=
-1
-;
-;
+|
 x86_64
 )
 MOZ_FFVPX
 =
 1
-;
-;
-arm
-*
-)
-MOZ_FFVPX
-=
-1
-MOZ_FFVPX_FLACONLY
-=
-1
-;
-;
-esac
 dnl
 Use
 same
@@ -27621,19 +27602,26 @@ ffvpx
 assembly
 decoder
 .
-if
-test
--
-n
-"
-MOZ_LIBAV_FFT
-"
-;
-then
 FFVPX_ASFLAGS
 =
 LIBAV_FFT_ASFLAGS
-fi
+;
+;
+arm
+*
+)
+MOZ_FFVPX
+=
+1
+MOZ_FFVPX_FLACONLY
+=
+1
+FFVPX_ASFLAGS
+=
+VPX_ASFLAGS
+;
+;
+esac
 if
 test
 -
