Bug 1295886 - P16. Enable FLAC C decoder on aarch64 machines. r=mshal
MozReview-Commit-ID: 9i3AaG5CGex

UltraBlame original commit: ae52929709bdb293f0e16d88960320b9b2128038

--- a/old-configure.in
+++ b/old-configure.in
@@ -27609,6 +27609,8 @@ LIBAV_FFT_ASFLAGS
 ;
 arm
 *
+|
+aarch64
 )
 MOZ_FFVPX
 =
@@ -27616,6 +27618,33 @@ MOZ_FFVPX
 MOZ_FFVPX_FLACONLY
 =
 1
+dnl
+Use
+same
+conditional
+as
+MOZ_LIBVPX
+to
+enable
+FFmpeg
+'
+s
+ffvpx
+assembly
+decoder
+.
+dnl
+aarch
+64
+FLAC
+decoder
+for
+now
+will
+be
+C
+only
+.
 FFVPX_ASFLAGS
 =
 VPX_ASFLAGS
