Bug 1395922 - [P5][Test] Capture clear content with canvas 2d after remove MediaKeys from the same HTMLMediaElement. r=cpearce
MozReview-Commit-ID: CUnblsNOmcm

UltraBlame original commit: f59a7e727f39201d8af28b9cb08b26a45d22007e

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -611,6 +611,15 @@ mp4
 headers
 ^
 bipbop_225w_175kbps
+.
+mp4
+bipbop_225w_175kbps
+.
+mp4
+^
+headers
+^
+bipbop_225w_175kbps
 -
 cenc
 -
@@ -7090,6 +7099,24 @@ tags
 =
 msg
 capturestream
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1149374
+[
+test_eme_unsetMediaKeys_then_capture
+.
+html
+]
 skip
 -
 if
