--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -6903,6 +6903,24 @@ android
 bug
 1149374
 [
+test_eme_detach_reattach_same_mediakeys_during_playback
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1149374
+[
 test_eme_initDataTypes
 .
 html
