Bug 1409259 - Add xpcshell tests for the Symantec distrust r=keeler
This commit adds two new xpcshell tests, both of them testing whether the
security state in TransportSecurityInfo includes the new
STATE_CERT_DISTRUST_IMMINENT flag under the correct circumstances.

The first test, test_symantec_apple_google.js, tests the four combinations of
certs that chain to an affected Symantec root: with/without a whitelisted
intermediate, and before/after the notBefore cutoff date.

The second test, test_symantec_apple_google_unaffected.js, tests an unrelated
ca->intermediate->ee chain that does not chain to an affected root, and ensures
the flag is not set.

This patch adds SymantecSanctionsServer to the mozbuild and xpcshell test
infrastructure files to ensure it runs properly on TaskCluster, too.

MozReview-Commit-ID: GtUXH2VFFh

UltraBlame original commit: 862c080c29138942409519f244c965be2cb04873

--- a/security/manager/ssl/tests/unit/xpcshell.ini
+++ b/security/manager/ssl/tests/unit/xpcshell.ini
@@ -141,6 +141,10 @@ test_startcom_wosign
 /
 *
 *
+test_symantec_apple_google
+/
+*
+*
 test_validity
 /
 *
@@ -972,6 +976,28 @@ test_sts_preloadlist_selfdestruct
 .
 js
 ]
+[
+test_symantec_apple_google
+.
+js
+]
+run
+-
+sequentially
+=
+hardcoded
+ports
+[
+test_symantec_apple_google_unaffected
+.
+js
+]
+run
+-
+sequentially
+=
+hardcoded
+ports
 [
 test_validity
 .
