Bug 1409259 - Add browser console test for the distrust console message r=keeler,ttaubert
There are xpcshell tests to verify that the appropriate distrust flag is set
upon reaching an affected end entity certificate; this test checks that the
distrust flag prints a warning to console.

MozReview-Commit-ID: OMG246WOOT

UltraBlame original commit: 98b1272e170c8b84fba7d39eaf1c909a4e5f2e34

--- a/devtools/client/webconsole/test/browser.ini
+++ b/devtools/client/webconsole/test/browser.ini
@@ -1504,6 +1504,11 @@ browser_console_addonsdk_loader_exception
 js
 ]
 [
+browser_console_certificate_imminent_distrust
+.
+js
+]
+[
 browser_console_clear_method
 .
 js
