Bug 1412930 - Package localized prerendered files. r=k88hudson
MozReview-Commit-ID: JUPAkCBhvPc

UltraBlame original commit: f7af48305978405e52c1b61920b3a51746249579

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,20 @@ browser
 /
 extensions
 /
+activity
+-
+stream
+/
+prerendered
+/
+id
+/
+!
+/
+browser
+/
+extensions
+/
 screenshots
 /
 webextension
