Bug 1919857: Include unified search button telemetry r=urlbar-reviewers,daleharvey,adw
Differential Revision: https://phabricator.services.mozilla.com/D223283

UltraBlame original commit: 56326e59b0e88e65020c37cda3c29dc5c3db18dd

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -31808,6 +31808,69 @@ record_in_processes
 :
 -
 main
+searchbutton
+:
+bug_numbers
+:
+-
+1919857
+description
+:
+>
+A
+keyed
+uint
+recording
+how
+many
+times
+the
+user
+entered
+a
+particular
+search
+mode
+by
+unified
+search
+button
+.
+expires
+:
+never
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+fx
+-
+search
+-
+telemetry
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+products
+:
+-
+'
+firefox
+'
+record_in_processes
+:
+-
+main
 shortcut
 :
 bug_numbers
@@ -32781,6 +32844,69 @@ a
 one
 -
 off
+.
+expires
+:
+never
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+fx
+-
+search
+-
+telemetry
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+products
+:
+-
+'
+firefox
+'
+record_in_processes
+:
+-
+main
+searchbutton
+:
+bug_numbers
+:
+-
+1919857
+description
+:
+>
+A
+keyed
+uint
+recording
+how
+many
+times
+the
+user
+entered
+a
+particular
+search
+mode
+by
+unified
+search
+button
 .
 expires
 :
