Bug 1921495 - Enable schemeful cookie in nightly, r=valentin
Differential Revision: https://phabricator.services.mozilla.com/D223985

UltraBlame original commit: c5215999b2214c8ec265aa7ed791f897f4b0e29d

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22506,6 +22506,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+database
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+simpledb
+.
+databaseInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 Determines
 within
 what
@@ -74265,7 +74299,7 @@ type
 bool
 value
 :
-false
+IS_NIGHTLY_BUILD
 mirror
 :
 always
