Bug 1920155 - Add feature usage bitfield to the PageloadEvent, start with fetchPriority r=denispal,emilio
Extend the pageload event to store features used on the root document for better signal-to-noise detection in performance experiments.
This patch uses a bit to record documents in which fetchpriority is used on images.

Data-classification-low: Category 1 “Technical data”

Differential Revision: https://phabricator.services.mozilla.com/D222991

UltraBlame original commit: 33e502b0f9b19d37b250b7e1d04b3618ec758d6f

--- a/dom/metrics.yaml
+++ b/dom/metrics.yaml
@@ -805,6 +805,33 @@ used
 type
 :
 string
+features
+:
+description
+:
+"
+Bitfield
+of
+features
+in
+use
+within
+this
+document
+:
+1
+-
+fetchpriority
+applied
+to
+images
+"
+type
+:
+quantity
+unit
+:
+integer
 send_in_pings
 :
 -
