Bug 1899734 - Part 9: Add tests. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D223356

UltraBlame original commit: e960d124130226bbac58634be40c0e4be7b3eae7

--- a/layout/style/test/browser.toml
+++ b/layout/style/test/browser.toml
@@ -57,6 +57,29 @@ js
 ]
 [
 "
+browser_resource_cache_perf_timeline
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+empty
+.
+html
+"
+"
+css_server
+.
+sjs
+"
+]
+[
+"
 browser_sourcemap
 .
 js
