Bug 1916635 - Part 2: Add tests. r=bthrall
Differential Revision: https://phabricator.services.mozilla.com/D223358

UltraBlame original commit: 21918f56f1e35498ca1140b69fa290d3612377aa

--- a/dom/tests/browser/browser.toml
+++ b/dom/tests/browser/browser.toml
@@ -763,6 +763,34 @@ sjs
 ]
 [
 "
+browser_scriptCache_perf_timeline
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+!
+nightly_build
+"
+]
+support
+-
+files
+=
+[
+"
+perf_server
+.
+sjs
+"
+]
+[
+"
 browser_scriptCache_redirect
 .
 js
