--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -25728,6 +25728,41 @@ mirror
 :
 always
 #
+Server
+-
+Sent
+Events
+#
+Equal
+to
+the
+DEFAULT_RECONNECTION_TIME_VALUE
+value
+in
+nsEventSource
+.
+cpp
+-
+name
+:
+dom
+.
+serverEvents
+.
+defaultReconnectionTime
+type
+:
+RelaxedAtomicUint32
+value
+:
+5000
+#
+in
+milliseconds
+mirror
+:
+always
+#
 Whether
 automatic
 storage
