Bug 1921258 - display android-startup-test tasks next to builds on treeherder. r=aaronmt,aryx
Differential Revision: https://phabricator.services.mozilla.com/D223767

UltraBlame original commit: b9868f1770a8d8e9660b8feab9af904c0ad3d05f

--- a/taskcluster/kinds/android-startup-test/kind.yml
+++ b/taskcluster/kinds/android-startup-test/kind.yml
@@ -111,17 +111,6 @@ treeherder
 kind
 :
 test
-platform
-:
-'
-nightly
--
-start
--
-test
-/
-opt
-'
 tier
 :
 1
@@ -388,6 +377,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+fenix
+-
+android
+-
+all
+/
+opt
 symbol
 :
 fenix
@@ -632,6 +630,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+fenix
+-
+android
+-
+all
+/
+opt
 symbol
 :
 fenix
@@ -876,6 +883,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+fenix
+-
+android
+-
+all
+/
+opt
 symbol
 :
 fenix
@@ -1114,6 +1130,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+fenix
+-
+android
+-
+all
+/
+opt
 symbol
 :
 fenix
@@ -1374,6 +1399,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+focus
+-
+android
+-
+all
+/
+opt
 symbol
 :
 focus
@@ -1640,6 +1674,15 @@ apk
 ]
 treeherder
 :
+platform
+:
+focus
+-
+android
+-
+all
+/
+opt
 symbol
 :
 focus
@@ -1910,6 +1953,15 @@ startup
 -
 x86
 )
+platform
+:
+focus
+-
+android
+-
+all
+/
+opt
 worker
 :
 env
@@ -2109,6 +2161,15 @@ robo
 -
 opt
 )
+platform
+:
+focus
+-
+android
+-
+all
+/
+opt
 worker
 :
 env
