Bug 1921488 - display ui-test-apk tasks next to builds on treeherder. r=aryx,aaronmt DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D223972

UltraBlame original commit: ce1520e620c1465c0dc08bce175fd6c9a89ae2ac

--- a/taskcluster/kinds/ui-test-apk/kind.yml
+++ b/taskcluster/kinds/ui-test-apk/kind.yml
@@ -965,9 +965,9 @@ platform
 '
 focus
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -1268,9 +1268,9 @@ platform
 '
 focus
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -1571,9 +1571,9 @@ platform
 '
 focus
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -1853,9 +1853,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -2143,9 +2143,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -2428,9 +2428,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -2719,9 +2719,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -3011,9 +3011,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -3224,9 +3224,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -3515,9 +3515,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
@@ -3820,9 +3820,9 @@ platform
 '
 fenix
 -
-ui
+android
 -
-test
+all
 /
 opt
 '
